--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta property="og:image" content="https://codesync.alexlevkov.com/Meta_Preview.png">
+  <meta property="og:image" content="https://codesync.alexlevkov.com/meta-preview.png">
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta name="theme-color" content="#000000" />
