--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,9 +21,8 @@
   <meta property="og:title" content="CodeSync" />
   <meta property="og:description"
     content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." />
-  <meta property="og:image" content="https://codesync.alexlevkov.com/meta-preview.png" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+  <meta name="image" property="og:image" content="https://codesync.alexlevkov.com/meta-preview.png" />
+  <meta name="description" property="og:image:width" content="1200" />
   <meta property="og:url" content="https://codesync.alexlevkov.com/" />
   <meta property="og:type" content="website" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
