--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,8 +7,8 @@
   <!-- <meta property="og:title" content="CodeSync" /> -->
   <!-- <meta property="og:description"
     content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." /> -->
-  <meta property="og:image" content="https://codesync.alexlevkov.com/preview.jpeg" />
-  <meta property="og:image:secure_url" content="https://codesync.alexlevkov.com/preview.jpeg" />
+  <meta name="image" property="og:image" content="https://codesync.alexlevkov.com/preview.jpeg" />
+  <!-- <meta property="og:image:secure_url" content="https://codesync.alexlevkov.com/preview.jpeg" /> -->
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="600" />
