--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,12 +8,12 @@
   <!-- <meta property="og:description"
     content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." /> -->
   <title>CodeSync</title>
+  <meta property="og:image" content="https://codesync.alexlevkov.com/preview.jpeg" />
   <meta property="og:title" content="CodeSync" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://https://codesync.alexlevkov.com" />
-  <meta name="image" property="og:image" content="https://codesync.alexlevkov.com/preview.jpeg" />
-  <meta property="og:image:secure_url" content="https://codesync.alexlevkov.com/preview.jpeg" />
-  <meta property="og:image:type" content="image/jpeg" />
+  <!-- <meta property="og:image:secure_url" content="https://codesync.alexlevkov.com/preview.jpeg" /> -->
+  <!-- <meta property="og:image:type" content="image/jpeg" /> -->
   <!-- <meta property="og:image:width" content="600" /> -->
   <!-- <meta property="og:image:height" content="600" /> -->
   <!-- <meta property="og:image:alt" content="Preview" /> -->
