--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
   <!-- <meta property="og:description"
     content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." /> -->
   <title>CodeSync</title>
+  <meta  />
   <meta property="og:image" content="https://codesync.alexlevkov.com/preview.jpeg" />
   <meta property="og:title" content="CodeSync" />
   <meta property="og:type" content="website" />
