--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,11 +8,11 @@
   <!-- <meta property="og:description"
     content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." /> -->
   <title>CodeSync</title>
-  <meta  />
+  <meta />
   <meta property="og:image" content="https://codesync.alexlevkov.com/preview.jpeg" />
   <meta property="og:title" content="CodeSync" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://https://codesync.alexlevkov.com" />
+  <meta property="og:url" content="https://codesync.alexlevkov.com" />
   <!-- <meta property="og:image:secure_url" content="https://codesync.alexlevkov.com/preview.jpeg" /> -->
   <!-- <meta property="og:image:type" content="image/jpeg" /> -->
   <!-- <meta property="og:image:width" content="600" /> -->
