Update preview image

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,11 @@
 <html lang="en" prefix="og: https://ogp.me/ns#">
 
 <head>
+  <link rel="canonical" href="https://codesync.alexlevkov.com" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CodeSync</title>
+  <link rel="canonical" href="https://codesync.alexlevkov.com" />
   <meta property="og:title" content="CodeSync" />
   <meta property="og:description"
     content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." />
