--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,7 @@
   <meta property="og:description"
     content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." />
   <meta name="image" property="og:image" content="https://codesync.alexlevkov.com/preview.jpg" />
+  <meta property="image" content="https://codesync.alexlevkov.com/preview.jpg" />
   <!-- <meta property="og:image:secure_url" content="https://codesync.alexlevkov.com/preview.jpg" /> -->
   <!-- <meta property="og:image:type" content="image/jpeg" /> -->
   <!-- <meta property="og:image:width" content="1200" /> -->
