Update preview image

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,28 +2,30 @@
 <html lang="en" prefix="og: https://ogp.me/ns#">
 
 <head>
-  <link rel="canonical" href="https://codesync.alexlevkov.com" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CodeSync</title>
+
   <link rel="canonical" href="https://codesync.alexlevkov.com" />
+
   <meta property="og:title" content="CodeSync" />
   <meta property="og:description"
     content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." />
-  <meta name="image" property="og:image" content="https://codesync.alexlevkov.com/preview.jpg" />
-  <meta property="image" content="https://codesync.alexlevkov.com/preview.jpg" />
-  <!-- <meta property="og:image:secure_url" content="https://codesync.alexlevkov.com/preview.jpg" /> -->
-  <!-- <meta property="og:image:type" content="image/jpeg" /> -->
-  <!-- <meta property="og:image:width" content="1200" /> -->
-  <!-- <meta property="og:image:height" content="630" /> -->
-  <!-- <meta property="og:image:alt" content="Preview" /> -->
+  <meta property="og:image" content="https://codesync.alexlevkov.com/preview.jpg" />
+  <meta property="og:image:secure_url" content="https://codesync.alexlevkov.com/preview.jpg" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Preview" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://codesync.alexlevkov.com" />
+
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
     rel="stylesheet">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
 
 <body>
