--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: https://ogp.me/ns#">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CodeSync</title>
-  
+
   <!-- Canonical Link -->
   <link rel="canonical" href="https://codesync.alexlevkov.com" />
-  
+
   <!-- Standard Meta Tags -->
-  <meta name="description" content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." />
-  <meta name="image" content="https://codesync.alexlevkov.com/preview.jpg" />
-  
+  <meta name="description"
+    content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." />
+  <meta name="image"
+    content="https://raw.githubusercontent.com/AlexLevkov/code-sync/main/frontend/public/preview.jpg" />
+
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="CodeSync" />
-  <meta property="og:description" content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." />
-  <meta property="og:image" content="https://codesync.alexlevkov.com/preview.jpg" />
-  <meta property="og:image:secure_url" content="https://codesync.alexlevkov.com/preview.jpg" />
+  <meta property="og:description"
+    content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." />
+  <meta property="og:image"
+    content="https://raw.githubusercontent.com/AlexLevkov/code-sync/main/frontend/public/preview.jpg" />
+  <meta property="og:image:secure_url"
+    content="https://raw.githubusercontent.com/AlexLevkov/code-sync/main/frontend/public/preview.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:image:alt" content="Preview" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://codesync.alexlevkov.com" />
-  
+
   <!-- Favicon and Fonts -->
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+    rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
+
 <body>
   <div id="root"></div>
 </body>
+
 </html>
