Update preview image

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,15 +10,14 @@
   <link rel="canonical" href="https://codesync.alexlevkov.com" />
 
   <!-- Standard Meta Tags -->
-  <meta name="description"
-    content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." />
+  <meta name="description" content="This is a real-time code editing web app" />
   <meta name="image"
     content="https://raw.githubusercontent.com/AlexLevkov/code-sync/main/frontend/public/preview.jpg" />
 
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="CodeSync" />
-  <meta property="og:description"
-    content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." />
+  <!-- <meta property="og:description"
+    content="This is a real-time code editing web app, that allows multiple users to collaboratively edit code and interact online." /> -->
   <meta property="og:image"
     content="https://raw.githubusercontent.com/AlexLevkov/code-sync/main/frontend/public/preview.jpg" />
   <meta property="og:image:secure_url"
