Refactor to Vite

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
-<html lang="en" prefix="og: https://ogp.me/ns#">
+<!doctype html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" />
+  <link rel="icon" href="./public/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>CodeSync</title>
   <link rel="canonical" href="https://codesync.alexlevkov.com" />
   <meta name="image"
@@ -20,16 +22,16 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://codesync.alexlevkov.com" />
   <!-- Favicon and Fonts -->
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="./public/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
     rel="stylesheet">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
 
 <body>
   <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
